--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -28,7 +28,7 @@
           >
             {{kind-print-label model.kind}}
             {{t "of"}}
-            {{moment-format model.plannedStart}}
+            {{date model.plannedStart}}
             ({{model.numberRepresentation}})
           </Utils::ModelSelector>
         </div>
