--- a/app/components/publications/publication/proofs/proof-received-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-received-panel.hbs
@@ -7,7 +7,7 @@
             {{t "received-proof"}}
           </h4>
           <p data-test-proof-received-panel-end-date class="auk-u-text-small auk-u-m-0">
-            {{moment-format @proofingActivity.endDate}}
+            {{date @proofingActivity.endDate}}
           </p>
         </Auk::Toolbar::Item>
       </Auk::Toolbar::Group>
