--- a/app/components/publications/publication/translations/translation-received-panel.hbs
+++ b/app/components/publications/publication/translations/translation-received-panel.hbs
@@ -7,7 +7,7 @@
             {{t "received-translation"}}
           </h4>
           <span data-test-translation-received-panel-end-date class="auk-u-text-small auk-u-m-0">
-            {{moment-format @translationActivity.endDate}}
+            {{date @translationActivity.endDate}}
           </span>
         </Auk::Toolbar::Item>
       </Auk::Toolbar::Group>
