--- a/app/components/publications/publication/translations/translations-info-panel.hbs
+++ b/app/components/publications/publication/translations/translations-info-panel.hbs
@@ -92,7 +92,7 @@
               class="auk-u-m-0"
             >
               {{#if @translationSubcase.dueDate}}
-                {{moment-format @translationSubcase.dueDate}}
+                {{date @translationSubcase.dueDate}}
               {{else}}
                 -
               {{/if}}
