--- a/app/components/utils/case-search.hbs
+++ b/app/components/utils/case-search.hbs
@@ -39,7 +39,7 @@
               </p>
             </td>
             <td onclick={{fn this.selectCase row}}>
-              {{moment-format row.created "DD-MM-YYYY HH:mm"}}
+              {{datetime row.created}}
             </td>
           </tr>
           {{!-- template-lint-enable no-invalid-interactive --}}
