--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -110,7 +110,7 @@
                     </p>
                   </td>
                   <td>
-                    {{moment-format latestAgendaitem.meetingDate}}
+                    {{date latestAgendaitem.meetingDate}}
                   </td>
                   <td data-test-route-search-newsletter-infos-row-mandatees>
                     {{#each row.mandatees as |mandatee|}}
