--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -172,7 +172,7 @@
                       {{/if}}
                     </td>
                     <td>
-                      {{moment-format row.openingDate}}
+                      {{date row.openingDate}}
                     </td>
                     <td>
                       <Auk::StatusPill
