--- a/app/templates/search/agenda-items.hbs
+++ b/app/templates/search/agenda-items.hbs
@@ -106,7 +106,7 @@
                 {{/if}}
               </td>
               <td>
-                {{moment-format row.sessionDates}}
+                {{date row.sessionDates}}
               </td>
               <td class="auk-u-text-align--right">
                 <AuLink
