--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -87,10 +87,10 @@
                 </p>
               </td>
               <td>
-                {{moment-format row.created "DD-MM-YYYY HH:mm"}}
+                {{datetim row.created "DD-MM-YYYY HH:mm"}}
               </td>
               <td>
-                {{moment-format row.sessionDates}}
+                {{date row.sessionDates}}
               </td>
               <td class="auk-u-text-align--right">
                 <AuLink
