--- a/app/components/agenda/side-nav.hbs
+++ b/app/components/agenda/side-nav.hbs
@@ -61,11 +61,11 @@
                 {{#if agenda.status.isDesignAgenda}}
                   {{t "latest-modified-on"}}
                   <br />
-                  {{moment-format agenda.modified "dd DD-MM-YYYY HH:mm"}}
+                  {{date-format agenda.modified "EEEEEE dd-MM-yyyy HH:mm"}}
                 {{else if agenda.modified}}
                   {{t "approved-on"}}
                   <br />
-                  {{moment-format agenda.modified "dd DD-MM-YYYY HH:mm"}}
+                  {{date-format agenda.modified "EEEEEE dd-MM-yyyy HH:mm"}}
                 {{else}}
                   {{t "approved"}}
                 {{/if}}
@@ -118,11 +118,11 @@
                 {{#if agenda.status.isDesignAgenda}}
                   {{t "latest-modified-on"}}
                   <br />
-                  {{moment-format agenda.modified "dd DD-MM-YYYY HH:mm"}}
+                  {{date-format agenda.modified "EEEEEE dd-MM-yyyy HH:mm"}}
                 {{else if agenda.modified}}
                   {{t "approved-on"}}
                   <br />
-                  {{moment-format agenda.modified "dd DD-MM-YYYY HH:mm"}}
+                  {{date-format agenda.modified "EEEEEE dd-MM-yyyy HH:mm"}}
                 {{else}}
                   {{t "approved"}}
                 {{/if}}
