--- a/app/components/documents/document-version-history-item.hbs
+++ b/app/components/documents/document-version-history-item.hbs
@@ -31,9 +31,7 @@
     {{!-- no piece.created in legacy data --}}
     {{#if @piece.created}}
       {{t "uploaded-at"}}
-      {{moment-format @piece.created}}
-      {{t "at"}}
-      {{moment-format @piece.created "HH:mm"}}
+      {{datetime-at @piece.created}}
     {{/if}}
   </div>
   <div class="vlc-document-card-item__icon">
