--- a/app/components/publications/publication/decisions/info/decisions-info-panel.hbs
+++ b/app/components/publications/publication/decisions/info/decisions-info-panel.hbs
@@ -69,7 +69,7 @@
                       target="_blank"
                     >
                       {{#if @publicationFlow.decisionActivity.startDate}}
-                        {{moment-format @publicationFlow.decisionActivity.startDate}}
+                        {{date @publicationFlow.decisionActivity.startDate}}
                       {{else}}
                         {{t "to-agenda"}}
                       {{/if}}
@@ -153,14 +153,14 @@
                     target="_blank"
                   >
                     {{#if @publicationFlow.decisionActivity.startDate}}
-                      {{moment-format @publicationFlow.decisionActivity.startDate}}
+                      {{date @publicationFlow.decisionActivity.startDate}}
                     {{else}}
                       {{t "to-agenda"}}
                     {{/if}}
                   </AuLink>
                 {{else}}
                   {{#if @publicationFlow.decisionActivity.startDate}}
-                    {{moment-format @publicationFlow.decisionActivity.startDate}}
+                    {{date @publicationFlow.decisionActivity.startDate}}
                   {{else}}
                     {{t "dash"}}
                   {{/if}}
