--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -70,7 +70,7 @@
                   </Auk::Avatar>
                 </td>
                 <td>
-                  {{moment-format signFlow.decisionActivity.startDate}}
+                  {{date signFlow.decisionActivity.startDate}}
                 </td>
                 <td>
                   <DigitalSigning::SigningFlowStatus @signingFlow={{signFlow}} />
